--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 							</div>
 							</a>
 						</div>
-						<div class="research iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
+						<!-- <div class="research iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
 				 			<a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out">
 				 			<div class="selectedprojects-des">
 								<h2 class="bold">CNBC</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
 							</a>
-						</div>
+						</div> -->
 						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgarden">
  							<a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
@@ -142,22 +142,22 @@
 							</div>
 							</a>
 						</div>
-						<div class="design iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
+						<!-- <div class="design iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
  							<a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2 class="bold">UVENT</h2>
 								<h4>Design Challenge | Product Design</h4>
 							</div>
 							</a>
-						</div>
-						<div class="research iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
+						</div> -->
+						<!-- <div class="research iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
  							<a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2 class="bold">COMERICA</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
 							</a>
-            </div>
+            </div> -->
         	</div>
 				</div>
 			</div>
