--- a/vegout.html
+++ b/vegout.html
@@ -162,7 +162,7 @@
 						<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the environment improving.</p>
 					</div>
 					<div class="col-lg-8 col-md-7 col-sm-6">
-				<br>	<img class="center" src="images/vegout1.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br>
+				<br>	<img class="center" src="images/vegout1.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
 				</div>
 			</div>
 				<div class= "row">
@@ -171,7 +171,7 @@
 						<p style="color:#fff;">Users are able to track their progress and see the positive impact of their accumulated meat-free days.</p>
 					</div>
 					<div class="col-lg-8 col-md-7 col-sm-6">
-				<br>	<img class="center" src="images/vegout2.gif" style="max-width:70%" alt="manager"><br><br><br><br><br>
+				<br>	<img class="center" src="images/vegout2.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
 				</div>
 				</div>
 				<div class= "row">
@@ -179,7 +179,7 @@
 						<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE III</span><br>FRIENDLY MOTIVATION</h3>
 						<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in numnber of meat-free days.</p></div>
 						<div class="col-lg-8 col-md-7 col-sm-6">
-					<br>	<img class="center" src="images/vegout3.gif" style="max-width:70%" alt="manager"><br><br><br><br><br>
+					<br>	<img class="center" src="images/vegout3.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
 					</div>
 				</div>
 				<div class= "row">
@@ -205,11 +205,9 @@
 			</div>
 			<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p class="mont">First design problem: the design process</p><br><br>
+						<p class="mont">Paying close attention to the details of people's narratives</p><br><br>
 					</div>
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>I spent some time thinking critically about how I wanted to tackle the problem. I knew I wanted to emphasize people’s narratives and pay close attention to the details of people’s stories.</p><br><br>
-					</div>
+
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<img src="images/vegoutprocess.png" class="img-responsive center" style="max-width:100%">
 </div>
@@ -241,10 +239,10 @@
 					<div class="content">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
-								<h3>INTRERVIEWS</h3>
+								<h3>INTERVIEWS</h3>
 								<p class="mont">There are different reasons to why people want to reduce their meat intake<br><br></p>
 								<img src="images/vegoutinterviews.png" class="img-responsive center" width="100%"><br><br><br>
-								<p>*Create a product that accommodates for users' different intents to want to reduce meat intake.
+								<p>*10 semi-structured interviews with 3 vegans and 7 nonvegans.
 </p>
 	</div>
 				</div>
@@ -262,8 +260,10 @@
 
 								<div class="row">
 									<div class="col-lg-12 col-md-12 col-sm-12">
-											<h3>PERSONAS</h3>
-											<p class="mont">Different users want to see different statistics about their meat-free diet's positive impact<br><br></p>
+											<h3>PERSONAS DERIVED FROM INTERVIEWS</h3>
+											<p class="mont">Target users' backgrounds are diverse but the way they are motivated is similar:
+										<br><br></p>
+											<p>Users want to be motivated on their meat-free journey by being reminded of their positive impact from eating less meat. Therefore, my solution's first feature became a <span style="font-weight:bold;">display of benefits from users' accumulated number of meat-free days.</span></p><br>
 
 											<img src="images/personas.png" class="img-responsive center" width="100%">
 				</div>
@@ -279,8 +279,9 @@
 					<div class="content">
 					<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
-								<h3>STORYMAPS</h3>
-								<p class="mont">Become a one-stop resource for this significant life change: vegan recipes</p><br><br>
+								<h3>STORYMAPS FOR EACH PERSONA</h3>
+								<p class="mont">Become a one-stop resource for this significant life change: vegan recipes<br><br></p>
+									<p>In each of the written storymaps, users were looking up vegan recipes and therefore <span style="font-weight:bold;">access to vegan recipes was included as a second feature.</span></p><br>
 	    </div>
 	  </div>
 	</section>
@@ -294,50 +295,9 @@
 			</section>
 
 
-	<!-- <section id="graybg">
-		<div class="container">
-					<div class="content">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h2 class="heading bold">Phase 3 of 4: Exploring</h2>
-		      </div>
-				</div>
 
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>SKETCHING</h3>
-					<p class="mont">Mobile app is the best medium because of its easy access and portability</p><br><br>
-				</div>
-					<div class="col-lg-12 col-md-12 col-sm-12">
-            <img src="images/sketching.jpg" class="img-responsive center" style="max-width:100%">
-	</div>
-    </div>
-		</div>
-		</div>
-	</section>
 
-	<section id="section">
-		<div class="container">
-			<div class="content">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>PAPER PROTOTYPING + USER TESTING</h3>
-						<p class="mont">Users want a visual representation of progress that is understandable at a glance</p><br><br>
-									                   </div>
-																	 </div>
-																	 <div class="row">
-																		 <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-														           <img src="images/sketch1.jpg" class="img-responsive center">
-														         </div>
-														         <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-														           <img src="images/sketch2.jpg" class="img-responsive center"><br>
-														         </div>
-																	 </div>
-									               </div>
-									             </div>
-														 </section> -->
-
-													 <section id="solutiongray">
+													 <section id="graybg">
 													 	<div class="container">
 															<div class="content">
 													 		<!-- <div class="row">
@@ -347,45 +307,81 @@
 																</div> -->
 																<div class="row">
 																	<div class="col-lg-12 col-md-12 col-sm-12">
-								                   <h3>SPECIFY DESIGN CONTEXT</h3>
+								                   <h3>EXPLORING + REFINING</h3>
 																	 <p class="mont">Focusing on the bare necessities for a successful product</p><br><br>
 								                 </div>
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 
 
-								                   <p>After ideating, exploring, and two rounds of user testing, I had a clearer idea on what was necessary for my app to succeed and what other features were overwhelming the user. <br> <br><br>
-																		 <!-- <span style="font-weight: bold">Essential Functions:</span>
-                                     <li>display of accumulated benefits from users’ number of meat-free days</li>
-                                      <li>ability to locate communities for social support</li>
-																			<li>access to vegan meal recipes to go meat-free</li>
-																			<li>access to education about and latest news of vegan diets</li><br>
+								                   <!-- <p>With each iteration of user testing, I was able to eliminate features that I thought would be useful but users found overwhelming.</p>
+ <br> <br><br> -->
+</div></div>
+<div class= "row">
+<div class="col-lg-4 col-md-5 col-sm-6">
+	<h5><span style="font-weight: bold; font-size:14px;">SKETCHING</span></h5>
+	<p>A mobile application would be the best medium for the solution because it is portable, easy to access, and the solution's success depends on daily logging.</p>
+</div>
+<div class="col-lg-8 col-md-7 col-sm-6">
+<br> 					<img src="images/sketching.jpg" class="img-responsive center" style="max-width:100%">
+<br><br><br><br><br><br><br><br>
+</div>
+</div>
+<div class= "row">
+<div class="col-lg-4 col-md-5 col-sm-6">
+	<h5><span style="font-weight: bold; font-size:14px;">PAPER PROTOTYPES</span></h5>
+	<p>Lo-fi prototypes were useful because they can be done in a short amount of time and be iterated on quickly for user testing.</p>
+</div>
+<div class="col-lg-8 col-md-7 col-sm-6">
 
 
-																			<p>
-																		 	 <span style="font-weight: bold">Human Processes:</span>
-																		 	 <li>Don't contribute to alert fatigue</li>
-																		 		<li>People want to help</li>
-																		 		<li>People are more likely to be encouraged by positive reinforcement</li>
-
-                                   </p> -->
-
-								                 </div>
-								               </div>
-								             </div>
-													 </div>
-													 </section>
-
-															 <section style="background-color: #f9f9f9; padding-bottom: 130px;">
-																 <div class="container">
-																					 <div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
-																							 <br><br><img src="images/vegoutinfo.png" class="img-responsive center" style="max-width:100%"><br>
-																					 </div>
-																				 </div>
-																	 </section>
+<br>				<img src="images/sketch1.jpg" class="img-responsive center">
+<img src="images/sketch2.jpg" class="img-responsive center"><br>
+<br><br><br><br><br><br><br><br>
+</div>
+</div>
+<div class= "row">
+<div class="col-lg-4 col-md-5 col-sm-6">
+	<h5><span style="font-weight: bold; font-size:14px;">FIRST DIGITAL PROTOTYPE</span></h5>
+	<p>With each iteration of user testing, I was able to eliminate features that I thought would be useful but users found overwhelming. For example, I replaced graphs with understandable-at-a-glance animation.</p>
+</div>
+	<div class="col-lg-8 col-md-7 col-sm-6">
+<br>	<img class="center" src="images/vegoutdraft.png" style="max-width:100%" alt="manager">
+</div>
+</div>
+</div>
+</div>
+</section>
 
 
 
-													 <section id="section">
+<section id="solutionwhite">
+	<div class="container">
+			<div class="content">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12">
+			<h3>SOLUTION</h3>
+		</div>
+	</div>
+	<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<p class="mont">One-stop mobile app that offers the tools and encouragement users need to reduce meat intake</p><br><br>
+			</div>
+					</div>
+
+		</section>
+
+		<section style="background-color: #fff; padding-bottom: 130px;">
+			<div class="container">
+								<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
+										<br><br><img src="images/vegoutinfo.png" class="img-responsive center" style="max-width:100%"><br>
+								</div>
+							</div>
+				</section>
+
+
+
+
+													 <section id="graybg">
 													  <div class="container">
 													 	 <div class="content">
 													 	 <div class="row">
