--- a/garden.html
+++ b/garden.html
@@ -83,7 +83,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 						<h4 class="subheading">Team & Roles</h4>
-							<p><mark>Michelle Kim</mark> <span style="font-family: 'Quicksand', sans-serif;"><mark>Gaze/fuse triggered rotating watering jug interaction</mark></span>
+							<p><mark>Michelle Kim</mark> <span style="font-family: 'Quicksand', sans-serif;"><mark>Gaze/fuse triggered rotating watering jug interaction</mark></span><br>
 								Kara Dailey<br>
 								Caitlin Helgesen<br>
 								Corbet Griffith<br>
