--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#work">work</a></li>
-				<li><a href="#about">about</a></li>
+				<li><a href="#work">Work</a></li>
+				<li><a href="#about">About</a></li>
 			</ul>
 		</div>
 	</div>
@@ -97,7 +97,7 @@
 						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="plexmark">
 							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
-			 					<h2 class="bold">LEXMARK</h2>
+			 					<h2 class="bold ">LEXMARK</h2>
 			 					<h4>Internship | UX Design</h4>
 		 					</div>
 							</a>
