--- a/lexmark.html
+++ b/lexmark.html
@@ -35,6 +35,9 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -69,24 +72,42 @@
 
 <!-- about section -->
 
+
 	<section id="overview">
 		<div class="container">
 			<div class="content">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<p class="title bold">Helping ServiceNow Service Now 👩🏻‍💻</p><br>
+					<p class="title bold">Helping ServiceNow Service Now</p><br>
 					<!-- <p>Web</p> -->
-					<p>UX Design Internship during May - Aug 2019 </p><br>	<br>
+					<h4 style="font-family: 'Quicksand', sans-serif;">UX Design Internship at Lexmark </h4>
+					<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">May - Aug 2019 </h4>
+					</div>
+</div>
 </div>
 
+</section>
+
+<section id="overviewimg" class="greenbg">
+	<div class="container whitefont">
+			<div class="content">
+		<img src="images/lexmarkpagetest.png" alt="manager" width="100%">
+</div>
+</div>
+</section>
+
+<section id="graybg">
+	<div class="container">
+		<div class="content">
+			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h3>OVERVIEW</h3>
-<p>As a UX design intern at Lexmark, I led a user-centered design project to redesign ServiceNow, an internal service tool for Lexmark employees to submit requests for any items or services that they need. My final design demonstrated a 36% improvement.
-					</p>
+<p class="mont">I redesigned ServiceNow, an internal tool for Lexmark employees to submit request forms for anything they need
+					</p><br><br>
 				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-					<h3>CONTRIBUTION</h3>
+					<h3>CONTRIBUTIONS</h3>
 					<li>High-fi prototype on Axure</li>
 					<li>Mockup on Adobe XD</li>
 						<li>Documentation for Developers</li>
@@ -96,20 +117,7 @@
 				</div>
 	</section>
 
-	<section id="overviewimg" class="greenbg">
-		<div class="container whitefont">
-				<div class="content">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<!-- <h3>MY CONTRIBUTION</h3>
-			<p>High-fi prototype on Axure, mockup on Adobe XD, Documentation for Developers, Interviews, Card Sorts, Usability Tests</p> -->
-			</div>
 
-		</div>
-			<img src="images/lexmarkpagetest.png" alt="manager" width="100%">
-</div>
-	</div>
-	</section>
 
 
 
