--- a/pawls.html
+++ b/pawls.html
@@ -59,24 +59,26 @@
 	</svg>
 </div>
 
-<section id="about">
+<section id="overview">
 	<div class="container">
+				<div class="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="headingtitle bold">PAWLS</h1>
-				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile Platform + Pervasive Computing</h5>
+				<p class="title">Helping Owners and Dogs Stay Together</p><br>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile + Pervasive Computing</h4>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;"> Sept - Dec 2019 </h4>
 			</div>
 		</div>
 	</div>
 </section>
 
-<!-- home section -->
-	<section id="pawls">
-		<div class="container">
-			<div class="row">
-			</div>
-		</div>
-	</section>
+<section id="overviewimg" class="pinkbg">
+
+	</div>
+		<img src="images/pawlspage.png" alt="manager" width="100%">
+</div>
+</div>
+</section>
 
 	<section id="about">
 		<div class="container">
