--- a/vegout.html
+++ b/vegout.html
@@ -33,6 +33,9 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -64,13 +67,29 @@
 			<div class="content">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<p class="title bold">Helping People Become More Meat-Free 🌿</p><br>
-					<p>Passion Product Design Project during Oct 2019</p><br><br>
-	</div>
+					<p class="title bold">Helping People Become More Meat-Free </p><br>
+
+					<h4 style="font-family: 'Quicksand', sans-serif;">Passion Product Design Project</h4>
+					<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Oct 2019</h4>
+				</div>
+</div>
+</div>
+
+</section>
+
+<section id="vegout">
+</section>
+
+<section id="graybg">
+	<div class="container">
+		<div class="content">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3>OVERVIEW</h3>
-<p>Veg Out is a mobile app that helps people reduce their animal meat intake by giving them the tools and the encouragement they need to succeed.
-		</p>
+<p class="mont">Veg Out is a mobile app that helps people reduce their animal meat intake
+</p><br>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -84,8 +103,6 @@
 </section>
 
 <!-- home section -->
-	<section id="vegout">
-	</section>
 
 
 
