--- a/pawls.html
+++ b/pawls.html
@@ -73,121 +73,78 @@
 </section>
 
 <section id="overviewimg" class="pinkbg">
-
 	</div>
 		<img src="images/pawlspage.png" alt="manager" width="100%">
 </div>
 </div>
 </section>
 
-	<section id="about">
-		<div class="container">
+<section id="graybg">
+	<div class="container">
+		<div class="content">
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-						<h4 class="subheading">Team & Roles</h4>
-							<p>	Sept - Dec 2019<br>
-								<mark>Michelle Kim</mark><span style="font-family: 'Quicksand', sans-serif;"><mark>Researcher & UX Designer</mark></span>
-								Corbet Griffith <span style="font-family: 'Quicksand', sans-serif;">Researcher & Hardware Engineer </span>
-								Shriya Hardiker<span style="font-family: 'Quicksand', sans-serif;">Researcher & Front End Engineer</span>
-								Chloe Clark<span style="font-family: 'Quicksand', sans-serif;">Researcher, Illustrator, & Video Editor</span><br></p>
 
-					</p>
-					</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h3>OVERVIEW</h3>
+<p class="mont">PAWLS is a training solution that decreases disruptive barking in dogs
 
-
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<h4 class="subheading">Tools & Skills</h4>
-						<h5 style="font-family: 'Quicksand', sans-serif;">Design</h5>
-						<p>Figma (I was solely responsible for the mobile app design), IoT Hardware design</p>
-						<h5 style="font-family: 'Quicksand', sans-serif;">Research</h5>
-						<p>Diary Study, Interviews, User Enactments, Surveys, Literature Reviews, Affinity Maps</p><br><br>
-					</div>
-			</div>
-			<div class= "row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4 class="subheading">Project Context</h4>
-					<p>Each year, approximately 6.5 million companion animals enter shelters in the US. Less than half of these animals, however, are adopted. In order to address the rampant issue of pet homelessness and increase the likelihood that these animals will have a second chance at life, we decided to explore how ubiquitous computing can help ensure newly adopted pets are remaining in their new homes.<br>
-					One of the most common behavioral issue that often arises and cause owners to return their new companions is barking. Our product is essentially a smart dog crate, paired with a mobile app, which will be used as a training tool to help dogs decrease their barking.
-				</p>
-						<br>
-					<br>
-					<br>
-					<br>
-					<br>
-				</div>
-			</div>
-		</section>
-
-
-		<section class="graybg">
-			<div class="container">
-				<br>
-				<br>
-				<br>
-				<br>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>RESEARCH PROCESS</h3>
-					<br>
-
-				</div>
-			</div>
-			<div class= "row">
-					<div class="col-lg-3 col-md-3 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-							<h4 style="font-family: 'Quicksand', sans-serif;">Explore</h4>
-							<li>Literature Reviews</li>
-							<li>Interviews</li>
-							<li>Ideation</li>
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-							<h4 style="font-family: 'Quicksand', sans-serif;">Understand</h4>
-							<li>Survey</li>
-							<li>Diary Study</li>
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-12 wow fadeInUp" data-wow-delay=".8s">
-							<h4 style="font-family: 'Quicksand', sans-serif;">Identify</h4>
-							<li>Criteria Selection</li>
-							<li>User Enactments</li>
-
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-12 wow fadeInUp" data-wow-delay="1s">
-							<h4 style="font-family: 'Quicksand', sans-serif;">Synthesize</h4>
-							<li>Hardware Prototype</li>
-							<li>Mobile App</li>
-
-					</div>
-				</div>
-			<br>
-			<br>
-			<br>
-					<br><br>
-		</div>
-		</section>
-
-
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3><br><br><br>Recommendations at Glance</h3>
-					<br>
-					<br>
-				</div>
-			</div>
-			<!-- <div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
-				<h4 style="font-family: 'Quicksand', sans-serif;">01</h4>
-				<p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow manipulation of stock charts(e.g. ability to extend lines through certain points on the graph).</p>
-
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<h4 style="font-family: 'Quicksand', sans-serif;">02</h4>
-				<p>Consider Youtube as competitor and adopt its gestures. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
-				<h4 style="font-family: 'Quicksand', sans-serif;">03</h4>
-				<p>CNBC should offer free trials to entice users to download the app and thenoffer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
+</p><br>
 	</div>
-			</div> -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+		<h3>CONTRIBUTIONS</h3>
+		<li>Soley designed mobile app on Figma</li>
+		<li>User Research (diary studies, user enactments, interviews, & surveys)</li><br><br><br>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+<img src="images/pawlsteam.png" class="img-responsive">
+</div>
+
+</div>	</div>
+
+</section>
+
+<section id="section">
+	<div class="container">
+		<div class="content">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h3>MOTIVATION</h3>
+			<p class="mont">Address the issue of pet homelessness
+			</p><br><br>
+				</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<img style="width:65%;" src="images/pawlsdog.png" class="img-responsive center"><br><br>
+
+	<p>Reduce the risk of failed adoptions by ensuring potential adopters find the right match.</p>
+
+
+</div>
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	<img style="width:70%;" src="images/pawlscollar.png" class="img-responsive center">
+	<p>Assist current dog owners in training their dogs to reduce the risk of dogs being given up to shelters.</p>
+
+</div>
+
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="graybg">
+		<div class="container">
+			<div class="content">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					<h3>SOLUTION</h3>
+
+					<p class="mont">A smart crate system paired with a mobile app
+
+</div>
+</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
 					<img src="images/pawls2.png" class="img-responsive">
@@ -201,281 +158,12 @@
 
 				</div>
 		</div>
-				<br><br><br><br><br><br>
+<br><br>
+		<p> This project is still in progress and will be updated soon</p>
+
 	</div>
 </section>
 
-<section class="graybg">
-	<div class="container">
-		<br>
-		<br>
-		<br>
-		<br>
-		<div class="row">
-			<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">IN PROGRESS</h1>
-				<!-- <h1 class="heading bold">Phase 1: Understand</h1>
-		 </div>
-	 </div>
-	 <div class= "row">
- 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h3>Interaction Map</h3>
-		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<p>To better understand our product, we created an interaction map. It allowed us to understand the product from a users' perspective.</p>
-		</div>
-		</div><img src="images/interactionmap.png" class="img-responsive"><br>
- 			<br>
- 			<br>
-			<br>
- 		</div>
- 	</div>
-	<br>
-	<br>
-</div>
-</section>
-
-	<section id="about">
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>Interviews</h3>
-					<br>
-					<h4> Our most important findings from interviews were:</h4>
-						<li>People who preferred watching live TV on mobile applications rather than on TV did so because of less ads and felt content on mobile apps updated faster.</li>
-						<li>Most popular video watching app seemed to be Youtube, and it was because of their recommendation feature, ability to interact with others through likes and comments, and the intuitive gestures such as swiping down to minimize video and being able to multitask.</li>
-						<br>
-  					<br>
-  					<br>
-  					<br></div>
-				</div>
-			</div>
-	</section>
-
-	<section class="graybg">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-									<br><br><br><h3 >Personas</h3>
-								</div>
-								<div class="col-lg-12 col-md-12 col-sm-12">
-										<p>We then wanted to understand the people using the CNBC mobile app. To create effective user personas, we decided to interview five students from the Ross School of Business, University of Michigan’s business school. Through the interviews, we collected enough qualitative data to flesh out two types of users. </p>
-									</div>
-									<div>
-										<img src="images/finance.png" style="width:100%" class= "animation" alt= "Vegout"><br><br><br>
-	</section>
-
-	<section id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 2: Explore</h1>
-		      </div>
-				</div>
-			</div>
-		</section>
-
-
-		<section>
-			<div class="container">
-				<div class= "row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>Competitive Analysis</h3><br>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-						<h4 style="font-family: 'Quicksand', sans-serif;">01 Direct</h4>
-						<p>Bloomberg was a direct competitor because it contained all the main features (markets, news, and video/TV)</p>
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.6s">
-						<h4 style="font-family: 'Quicksand', sans-serif;">02 Indirect</h4>
-						<p>WSJ was an indirect competitor because it provided financial news through some other medium than video</p>
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.8s">
-						<h4 style="font-family: 'Quicksand', sans-serif;">03 Partial</h4>
-						<p>Marketwatch, IGTV, Youtube Live, Yahoo Finance were all partial competitors because they had only a few overlapping content and features</p>
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="1s">
-						<h4 style="font-family: 'Quicksand', sans-serif;">04 Parallel</h4>
-						<p>Robinhood was a parallel competitor because the user base included finance/business interested people</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<br><br><br>
-
-		<section class="graybg">
-			<div class="container">
-				<br>
-				<br>
-				<br>
-				<br>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>SURVEY</h3>
-					<br>
-
-				</div>
-			</div>
-			<div class= "row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<p>We then wanted to learn about people’s habits and preferences. We were able to collect 43 survey responses from potential users who were students and professors from the Ross School of Business. With the surveys, we were able to learn that people prefer on-demand content much more than live content, half of the survey responses who watch cable TV reported they watch it on their mobile phones, and how people decide to sign up for membership largely depended on the uniqueness of the content more than other factors.</p>
-
-					</div>
-				</div>
-			<br>
-			<br>
-			<br>
-					<br><br>
-		</div>
-		</section>
-
-
-
-
-	<section id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 3: Identify</h1>
-		      </div>
-				</div>
-			</div>
-		</section>
-
-		<div class="padding">
-			<div class="container">
-				<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>HEURISTICS EVALUATION</h3>
-					</div>
-				</div>
-					<div class="row">
-					<div class="col-sm-6">
-						<h4>Most Notable Violations of Heuristics</h4>
-						<li>when bookmark option was selected, users were not able to locate where these bookmarked items were being saved</li>
-						<li>the horizontal colored bars across CNBC videos can be an area of confusion since for most video platforms, horizontal bars indicate progress</li>
-						<li>There was also a search icon in the videos section which did not allow for video searching</li>
-					<li>podcasts lack captions or transcript option</li>
-				<li>videos will autoplay when transitioning between vertical view to horizontal view even when paused</li>
-				</div>
-				<div class="col-sm-6">
-				<img src="images/cnbcreaction.png" class="img-responsive">
-				</div>
-					</div>
-					<br>
-					<br>
-					<br>
-					<br>
-				</div>
-			</div>
-
-			<section class="graybg">
-				<div class="container">
-					<br>
-					<br>
-					<br>
-					<br>
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>USABILITY TESTING</h3>
-						<br>
-
-					</div>
-				</div>
-				<div class= "row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<p>A usability testing was done with five participants to be able to provide concrete quantitative and qualitative data to strengthen our argument for our recommendations. The most crucial urgent recommendations were including subtitles for videos, incorporating gestures into videos that are already prevalent in video platforms like Netflix and Youtube such as double tapping to forward and reverse, and relevant link articles near videos for users who want to learn more beyond watching few minute clips. </p>
-						</div>
-					</div>
-				<br>
-				<br>
-				<br>
-						<br><br>
-			</div>
-		</section>
-
-
-			<section id="about">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 col-sm-12 text-center">
-							<h1 class="heading bold">Phase 4: Materialize</h1>
-							</div>
-						</div>
-					</div>
-				</section>
-
-		<section>
-			<div class="container">
-				<div class="row">
-					<div classs= "col">
-						<div class="col">
-							<h3>Preference Testing</h3>
-						</div>
-						<div class="col">
-
-							<p>We then decided to do a preference testing with eight people to see if people would actually prefer our recommendations over the current design. We cannot show our designs that showcase our recommendations because of the CNBC student project agreement but our designs were preferred 32 out of 32 times.
-	</p>
-						</div>
-					</div><br><br><br><br>
-				</div>
-			</section>
-
-				<section class="graybg">
-					<div class="container">
-						<br>
-						<br>
-						<br>
-						<br>
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12">
-							<h3>RECOMMENDATIONS</h3>
-							<br>
-						</div>
-					</div>
-					<div class= "row">
-							<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
-									<h4 style="font-family: 'Quicksand', sans-serif;">01</h4>
-									<hr>
-									<p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow manipulation of stock charts(e.g. ability to extend lines through certain points on the graph).</p>
-
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-									<h4 style="font-family: 'Quicksand', sans-serif;">02</h4>
-									<hr>
-									<p>Consider Youtube as competitor and adopt its gestures. Youtube was the most mentioned video watching app amongst our interviewees and survey respondents. People mentioned that they liked the gestures Youtube allowed because it limited action time and multitasking. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
-
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".8s">
-									<h4 style="font-family: 'Quicksand', sans-serif;">03</h4>
-									<hr>
-									<p>CNBC should offer free trials to entice users to download the app and thenoffer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
-							</div>
-						</div>
-					<br>
-					<br>
-					<br>
-							<br><br>
-				</div>
-				</section> -->
-
-
-
-
-													 <footer>
- 														<div class="container">
- 															<div class="row">
- 																<div class="col-md-12 col-sm-12">
- 																	<ul class="social-icon">
- 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																	</ul>
- 																</div>
- 															</div>
- 														</div>
- 													</footer>
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
