--- a/vegout.html
+++ b/vegout.html
@@ -96,7 +96,7 @@
 		<h3>CONTRIBUTIONS</h3>
 		<li>High-fi prototype on Sketch + Invision</li>
 		<li>Visual design on Adobe Illustrator</li>
-		<li>Storytelling (Storyboards, personas, & storymaps)</li>
+		<li>Storytelling (storyboards, personas, & storymaps)</li>
 		<li>Research (interviews, user tests, & competitive analysis)</li>
 	</div>	</div>	</div>
 
@@ -298,7 +298,7 @@
 							<div class="col-lg-12 col-md-12 col-sm-12">
 								<h3>STORYMAPS FOR EACH PERSONA</h3>
 								<p class="mont">Become a one-stop resource for this significant life change: vegan recipes<br><br></p>
-									<p>In each of the written storymaps, users were looking up vegan recipes and therefore <span style="font-weight:bold;">access to vegan recipes was included as a second feature.</span></p><br>
+									<p>In each of the written storymaps, users were looking up vegan recipes and therefore <span style="font-weight:bold;">access to vegan recipes became the second feature.</span></p><br>
 	    </div>
 	  </div>
 	</section>
