--- a/pawls.html
+++ b/pawls.html
@@ -64,7 +64,7 @@
 				<div class="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<p class="title">Helping Owners and Dogs Stay Together</p><br>
+				<p class="title">Helping Owners and Their Dogs Stay Together</p><br>
 				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile + Pervasive Computing</h4>
 				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;"> Sept - Dec 2019 </h4>
 			</div>
@@ -93,8 +93,8 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 		<h3>CONTRIBUTIONS</h3>
-		<li>Soley designed mobile app on Figma</li>
-		<li>User Research (diary studies, user enactments, interviews, & surveys)</li><br><br><br>
+		<p>Soley designed mobile app on Figma<br>
+		Conducted user research (diary studies, user enactments, interviews, & surveys)<br><br><br>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -111,21 +111,21 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h3>MOTIVATION</h3>
-			<p class="mont">Address the issue of pet homelessness
+			<p class="mont">How can we address the issue of pet homelessness?
 			</p><br><br>
 				</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img style="width:65%;" src="images/pawlsdog.png" class="img-responsive center"><br><br>
+						<img style="width:35%;" src="images/pawlsdog.png" class="img-responsive center"><br><br>
 
-	<p>Reduce the risk of failed adoptions by ensuring potential adopters find the right match.</p>
+	<p>By reducing the risk of failed adoptions</p>
 
 
 </div>
 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-	<img style="width:70%;" src="images/pawlscollar.png" class="img-responsive center">
-	<p>Assist current dog owners in training their dogs to reduce the risk of dogs being given up to shelters.</p>
+	<img style="width:35%;" src="images/pawlscollar.png" class="img-responsive center">
+	<p>By assisting current dog owners so that their dogs aren't given up to shelters</p>
 
 </div>
 
@@ -134,7 +134,29 @@
 	</div>
 </section>
 
+
 <section id="graybg">
+	<div class="container">
+			<div class="content">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12">
+			<h3>DESIGN OPPORTUNITY</h3>
+		</div>
+	</div>
+	<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<p class="mont">A dog's behavioral issue is the number one reason why dogs are given up to shelters</p><br><br>
+			</div>
+		</div>
+<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp">
+							<img src="images/pawlsquotes.png" class="img-responsive center" style="max-width:100%">
+						</div>
+					</div>
+
+		</section>
+
+<section id="solutionwhite">
 		<div class="container">
 			<div class="content">
 			<div class="row">
@@ -145,24 +167,22 @@
 
 </div>
 </div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/pawls2.png" class="img-responsive">
-
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-						<img src="images/pawls3.png" class="img-responsive">
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
-					<img src="images/pawls4.png" class="img-responsive">
-
-				</div>
-		</div>
 <br><br>
-		<p> This project is still in progress and will be updated soon</p>
-
-	</div>
+<div class="row">
+	<div class="col-lg-12 col-md-12 col-sm-12">
+<img src="images/pawlsfeatures.png" class="img-responsive center" style="max-width:100%">
+</div>
+</div><br><br><br><br>
 </section>
+
+		<section style="background-color: #EDEBAB; padding-bottom: 130px;"><br><br><br><br>
+					<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
+										<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
+								</div>
+							</div>
+
+				</section>
 
 
 <!-- JAVASCRIPT JS FILES -->
